--- a/packages/tests/public/index.html
+++ b/packages/tests/public/index.html
@@ -10,6 +10,13 @@
         <meta http-equiv="pragma" content="no-cache" />
         <title>Blend Core Test Suite</title>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <style>
+            *,
+            *::before,
+            *::after {
+                box-sizing: border-box;
+            }
+        </style>
         <script src="js/index.js"></script>
     </head>
     <body></body>
